--- a/contact.html
+++ b/contact.html
@@ -1,89 +1,97 @@
-
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<link rel="manifest" href="manifest.json" />
-<link href="styles.css" rel="stylesheet"/>   
-<title>Courtroom Scripts for Warriors - Sovereign Academy</title>
-<meta content="Speak with power and clarity in court. Get sample scripts for objections, motions, statements, and cross-exams." name="description"/>
-<meta content="courtroom script, what to say in court, how to speak in court, motion script, objections, self-rep scripts" name="keywords"/>
-<meta content="Courtroom Scripts for Warriors - Sovereign Academy" property="og:title"/>
-<meta content="Don't freeze in court — follow these self-rep courtroom scripts to speak with strength." property="og:description"/>
-<meta content="website" property="og:type"/>
-<meta content="summary" name="twitter:card"/>
-<meta content="Speak with Power in Court - Sovereign Academy" name="twitter:title"/>
-<meta content="Sample courtroom scripts for self-represented litigants who want to fight like pros." name="twitter:description"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Contact • Sovereign Academy</title>
+  <meta name="description" content="Get in touch with Sovereign Academy for support, feedback, and partnership inquiries." />
+  <link rel="canonical" href="https://integrityexists.com/contact.html" />
+  <meta name="theme-color" content="#0b0b0b" />
+  <link rel="manifest" href="manifest.json" />
+  <link rel="stylesheet" href="styles.css" />
+  <style>
+    .card{background:rgba(255,255,255,.02);border:1px solid rgba(0,255,140,.12);border-radius:16px;padding:1rem 1.1rem 1.2rem;}
+    .list{margin:.4rem 0 0 1rem}
+    .muted{opacity:.9}
+  </style>
+
+  <!-- JSON-LD: Organization -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Sovereign Academy",
+    "url": "https://integrityexists.com/",
+    "email": "admin@integrityexists.com",
+    "logo": "https://integrityexists.com/ask-sage-icon.png",
+    "sameAs": []
+  }
+  </script>
 </head>
 <body>
-<header class="site container"> 
-<div class="brand">Sovereign Academy</div> <nav class="top"> 
-<a href="index.html" class="nav-home">Home</a> </nav> 
-</header>
+  <!-- Home-only nav -->
+  <nav class="top" aria-label="Primary">
+    <div class="inner container" style="padding-left:1rem;padding-right:1rem;">
+      <a href="index.html" class="brand">🦁 Sovereign Academy</a>
+    </div>
+  </nav>
 
-<main>
-<h1>Courtroom Scripts for Warriors</h1>
-<p>Walking into court without a lawyer doesn’t mean walking in alone. These scripts give you the words — and the **confidence** — to stand tall, speak clearly, and make your record count. Use them as-is or ask Sage to tailor one to your case.</p>
-<h2>🎤 Opening Statement</h2>
-<pre>
-“Your Honor, my name is [Your Name], and I am appearing today as a self-represented litigant. I’m here to ensure that the rights of myself and my child are protected, and to address the issues outlined in this case. I appreciate the opportunity to be heard.”
-    </pre>
-<h2>🚫 Objecting in Court</h2>
-<ul>
-<li>“Objection, Your Honor — relevance.”</li>
-<li>“Objection — asked and answered.”</li>
-<li>“Objection — hearsay.”</li>
-<li>“Objection — assumes facts not in evidence.”</li>
-</ul>
-<h2>📣 Requesting Continuance</h2>
-<pre>
-“Your Honor, I respectfully request a continuance due to [reason: medical, missing records, newly retained evidence, etc.]. I need additional time to properly prepare and ensure a fair hearing.”
-    </pre>
-<h2>📁 Filing a Motion</h2>
-<pre>
-“Your Honor, I’d like to submit a written motion to [dismiss/remove/suppress/etc.], and I’m prepared to explain the basis for this request if the court is willing to hear it.”
-    </pre>
-<h2>🧠 Cross-Examining Witness</h2>
-<ul>
-<li>“Isn’t it true that…?”</li>
-<li>“Were you present when…?”</li>
-<li>“Can you provide any documentation to support that statement?”</li>
-<li>“Have you ever made a report like this before?”</li>
-</ul>
-<h2>💬 Final Statement</h2>
-<pre>
-“Your Honor, I’ve provided the court with facts, evidence, and lawful arguments. I ask only that this case be judged fairly, based on truth and justice — not bias or assumption.”
-    </pre>
-<h2>📄 Coming Soon</h2>
-<ul>
-<li>Script Pack PDF (printable)</li>
-<li>Sage Script Builder (type your issue → get your script)</li>
-</ul>
-<footer><p>© Sovereign Academy</p></footer>
-</main>
-<!-- Ask Sage Chatbot -->
-<script>
-  window.SageBotConfig = {
-    voice: true,
-    greetMessage: "Hey there, how can I help you with your legal questions today?",
-    placeholder: "Ask Sage anything...",
-    theme: "dark"
-  };
-</script>
-<script src="https://cdn.jsdelivr.net/gh/integrityexists/ask-sage@main/sagebot.js"></script>
+  <header class="hero">
+    <div class="container">
+      <h1>Contact Sovereign Academy</h1>
+      <p class="muted"><em>Real help from real humans (and Sage). We read everything.</em></p>
+    </div>
+  </header>
 
-<script type="text/javascript">
-  var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
-  (function(){
-    var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
-    s1.async = true;
-    s1.src = 'https://embed.tawk.to/681d203afe55ac190d5636e6/1iqosbpkt';
-    s1.charset = 'UTF-8';
-    s1.setAttribute('crossorigin','*');
-    s0.parentNode.insertBefore(s1, s0);
-  })();
-</script>
+  <main class="container" style="max-width:900px;">
+    <!-- Website & links -->
+    <section class="card">
+      <h2>Website & Links</h2>
+      <ul class="list">
+        <li>🌐 Website: <a href="https://integrityexists.com/" target="_blank" rel="noopener">integrityexists.com</a></li>
+        <li>🤖 Ask Sage: <a href="sage-chatbot.html">Open the Sage chat</a></li>
+        <li>📥 Downloads: <a href="download-hub.html">Download Hub</a></li>
+      </ul>
+    </section>
+
+    <!-- Support -->
+    <section class="card" style="margin-top:1rem;">
+      <h2>Support</h2>
+      <ul class="list">
+        <li>✉️ Email: <a href="mailto:admin@integrityexists.com?subject=Sovereign%20Academy%20Support">admin@integrityexists.com</a></li>
+        <li>🐞 Report a bug or broken link: <a href="mailto:admin@integrityexists.com?subject=Bug%20Report%20or%20Broken%20Link">email us here</a></li>
+      </ul>
+      <p class="muted" style="margin-top:.5rem;">We’re a tiny team; thanks for your patience while we reply.</p>
+    </section>
+
+    <!-- Optional human chat (Tawk.to) -->
+    <!--
+    <section class="card" style="margin-top:1rem;">
+      <h2>Live Human Chat</h2>
+      <p class="muted">Prefer a human? Use the chat bubble on this page.</p>
+    </section>
+    -->
+  </main>
+
+  <footer style="text-align:center; margin-top:2rem; color:#999; padding:20px; border-top:1px solid rgba(0,255,140,.15);">
+    © 2025 Sovereign Academy — Educational resources only. Not legal advice.
+  </footer>
+
+  <!-- (Optional) Re-enable Tawk.to on THIS page only -->
+  <!--
+  <script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+      var s1=document.createElement("script"), s0=document.getElementsByTagName("script")[0];
+      s1.async=true; s1.src='https://embed.tawk.to/681d203afe55ac190d5636e6/1iqosbpkt';
+      s1.charset='UTF-8'; s1.setAttribute('crossorigin','*'); s0.parentNode.insertBefore(s1,s0);
+    })();
+  </script>
+  <style>
+    /* keep Tawk bubble from fighting the Sage panel */
+    #tawkchat-minified{ left:20px !important; right:auto !important; } /* bottom-left */
+    @media (max-width:900px){ #tawkchat-minified{ display:none !important; } } /* hide on small screens */
+  </style>
+  -->
 </body>
 </html>
