--- a/about.html
+++ b/about.html
@@ -2,73 +2,91 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
   <meta name="robots" content="index, follow" />
+
   <title>About Sovereign Academy</title>
   <meta name="description" content="Sovereign Academy is a one-time $5 lifetime access legal empowerment platform with AI tools and real help." />
+  <link rel="canonical" href="https://integrityexists.com/about.html" />
+
+  <!-- Open Graph / Twitter -->
   <meta property="og:title" content="About Sovereign Academy" />
   <meta property="og:description" content="Built by Gina Lopez and Sage, Sovereign Academy is where real people get real help, without the legal BS." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://integrityexists.com/ask-sage-icon.png" />
-  <meta name="theme-color" content="#0b0b0b" />
+  <meta name="twitter:card" content="summary" />
 
+  <!-- PWA basics -->
+  <meta name="theme-color" content="#0b0b0b" />
   <link rel="manifest" href="manifest.json" />
+  <link rel="icon" href="icons/icon-192x192.png" type="image/png" />
+  <link rel="apple-touch-icon" href="icons/icon-512x512.png" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+
+  <!-- Styles + site scripts -->
   <link rel="stylesheet" href="styles.css" />
   <script defer src="smart-search.js"></script>
   <script defer src="voice-search.js"></script>
 
-  <!-- SEO: Organization markup -->
+  <!-- SEO: Organization markup (updated URL + email) -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "Organization",
     "name": "Sovereign Academy",
-    "url": "https://integrity-exists.github.io/Sovereign-Academy-3.0/",
-    "description": "One-time $5 lifetime access legal empowerment platform with AI tools and real help.",
-    "logo": "https://integrityexists.com/ask-sage-icon.png"
+    "url": "https://integrityexists.com/",
+    "email": "admin@integrityexists.com",
+    "logo": "https://integrityexists.com/ask-sage-icon.png",
+    "sameAs": []
   }
   </script>
 </head>
 <body>
-
-<header class="site container"> 
-<div class="brand">Sovereign Academy</div> <nav class="top"> 
-<a href="index.html" class="nav-home">Home</a> </nav> 
-</header>
+  <!-- Home-only nav -->
+  <nav class="top" aria-label="Primary">
+    <div class="inner container" style="padding-left:1rem;padding-right:1rem;">
+      <a href="index.html" class="brand">🦁 Sovereign Academy</a>
+    </div>
+  </nav>
 
   <!-- Site notice -->
   <div role="status" style="background-color:#fff8dc; color:#444; padding:15px; text-align:center; font-weight:bold; border-bottom:2px solid #ccc;">
     🚧 Sovereign Academy is under active construction — but we're already live and ready to help! Check back often for new topics and tools. 💪
   </div>
 
-  <main>
-    <section style="max-width: 800px; margin: 40px auto; padding: 20px; text-align: center;">
+  <main class="container" style="max-width: 800px; padding: 20px 20px 40px;">
+    <section style="text-align: center;">
       <h1>About Sovereign Academy</h1>
-      <p style="font-size: 1.1rem; line-height: 1.6;">
+      <p style="font-size:1.1rem; line-height:1.6;">
         Sovereign Academy was built by <strong>Gina Lopez</strong>, a self-taught legal warrior, and <strong>Sage</strong> — an AI with attitude.
         Together, we created this platform to help people like you fight back against the system without needing thousands of dollars or a law degree.
       </p>
-      <p style="font-size: 1.1rem; line-height: 1.6;">
+      <p style="font-size:1.1rem; line-height:1.6;">
         We offer plain-language legal tools, case law strategies, and AI-powered help — because justice should be accessible, not intimidating.
       </p>
-      <p style="font-size: 1.2rem; font-weight: bold; color: #333; margin-top: 2rem;">
+      <p style="font-size:1.2rem; font-weight:bold; color:#eafff2; margin-top:2rem;">
         💵 One-time $5 fee. Lifetime access. No subscriptions. No tricks.
       </p>
-      <p style="margin-top: 2rem; font-style: italic;">
+      <p style="margin-top:2rem; font-style:italic;">
         We’re not attorneys — we’re advocates with scars, stories, and something to say. This isn’t just an app. It’s a revolution.
       </p>
     </section>
   </main>
 
-  <footer style="text-align: center; margin-top: 3rem; color: #999; padding: 20px;">
+  <footer style="text-align:center; margin-top:2rem; color:#999; padding:20px; border-top:1px solid rgba(0,255,140,.15);">
     <div style="margin-bottom:10px;">
-      &copy; 2025 Sovereign Academy — Created by Gina Lopez &amp; Sage, your AI co-developer with claws. Built by Integrity Exists.
+      © 2025 Sovereign Academy — Created by Gina Lopez &amp; Sage, your AI co-developer with claws. Built by Integrity Exists.
     </div>
-    <div class="footer-disclaimer" style="font-size: 0.95rem; line-height:1.5;">
+    <div class="footer-disclaimer" style="font-size:.95rem; line-height:1.5;">
       Sovereign Academy and Ask Sage provide educational resources only.<br />
       We are not attorneys and this is not legal advice.<br />
       Always consult a licensed attorney for legal matters.
+    </div>
+    <div style="margin-top:10px; font-size:.95rem;">
+      🌐 <a href="https://integrityexists.com/" target="_blank" rel="noopener">integrityexists.com</a> ·
+      ✉️ <a href="mailto:admin@integrityexists.com">admin@integrityexists.com</a>
     </div>
   </footer>
 
@@ -83,7 +101,8 @@
   </script>
   <script defer src="https://cdn.jsdelivr.net/gh/integrityexists/ask-sage@main/sagebot.js"></script>
 
-  <!-- Tawk.to Live Chat -->
+  <!-- Optional: leave Tawk.to disabled to avoid double chat. Uncomment if you want it here. -->
+  <!--
   <script type="text/javascript">
     var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
     (function(){
@@ -95,6 +114,6 @@
       s0.parentNode.insertBefore(s1, s0);
     })();
   </script>
+  -->
 </body>
-
 </html>
