--- a/remove-gal.html
+++ b/remove-gal.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Learn how to remove a biased or unethical GAL from your custody case. We give you the steps, language, and confidence to stand up."/>
   <meta name="keywords" content="remove GAL, guardian ad litem misconduct, GAL bias, GAL removal, family court injustice"/>
   <link rel="manifest" href="manifest.json"/>
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="styles.css"/>
   <script src="smart-search.js"></script>
 </head>
 <body>
