--- a/ada-complaint.html
+++ b/ada-complaint.html
@@ -125,11 +125,23 @@
 
 <section>
   <h2>Coming Soon</h2>
-  <ul>
-    <li>📄 ADA Complaint Templates</li>
-    <li>📄 Disability Rights Self-Advocacy Guide</li>
-    <li>📄 Employer Accommodation Request Form</li>
-  </ul>
+<ul>
+<li>
+<a href="download-hub/ADA_Complaint_Template.pdf" download>
+ADA Complaint Template
+</a>
+</li>
+<li>
+<a href="download-hub/Disability_Rights_Self_Advocacy_Guide.pdf" download>
+Disability Rights Self-Advocacy Guide
+</a>
+</li>
+<li>
+<a href="download-hub/Employer_Accommodation_Request_Form.pdf" download>
+Employer Accommodation Request Form
+</a>
+</li>
+</ul>
 </section>
 
 <div class="search-container">
