--- a/download-hub.html
+++ b/download-hub.html
@@ -58,7 +58,35 @@
   </header>
 
   <main id="content" class="container grid" style="grid-template-columns: 1fr; gap:1.25rem;">
+    <section class="download-section">
+<h2>ADA Resources</h2>
+<div class="download-grid">
+<a class="dl-card" href="download-hub/ADA_Complaint_Template.pdf" download>
+<div class="dl-meta">
+<h3>ADA Complaint Template</h3>
+<p>PDF • DOJ complaint letter</p>
+</div>
+<span class="dl-btn">Download</span>
+</a>
+<a class="dl-card" href="download-hub/Disability_Rights_Self_Advocacy_Guide.pdf"
+download>
+<div class="dl-meta">
+<h3>Disability Rights Self-Advocacy Guide</h3>
+<p>PDF • step-by-step guide</p>
+</div>
+<span class="dl-btn">Download</span>
+</a>
+<a class="dl-card" href="download-hub/Employer_Accommodation_Request_Form.pdf"
+download>
+<div class="dl-meta">
+<h3>Employer Accommodation Request Form</h3>
 
+<p>PDF • Title I ADA template</p>
+</div>
+<span class="dl-btn">Download</span>
+</a>
+</div>
+</section>
     <!-- Court Prep -->
    <section class="card" aria-labelledby="court-h2">
   <h2 id="court-h2">🧑‍⚖️ Court Prep</h2>
