--- a/ada-complaint.html
+++ b/ada-complaint.html
@@ -124,20 +124,18 @@
 </section>
 
 <section>
-  <h2>Coming Soon</h2>
-<ul>
 <li>
-<a href="download-hub/ADA_Complaint_Template.pdf" download>
+<a href="download-hub/ADA_Complaint_Template.pdf" target="_blank"> 
 ADA Complaint Template
 </a>
 </li>
 <li>
-<a href="download-hub/Disability_Rights_Self_Advocacy_Guide.pdf" download>
+<a href="download-hub/Disability_Rights_Self_Advocacy_Guide.pdf" target="_blank">
 Disability Rights Self-Advocacy Guide
 </a>
 </li>
 <li>
-<a href="download-hub/Employer_Accommodation_Request_Form.pdf" download>
+<a href="download-hub/Employer_Accommodation_Request_Form.pdf" target="_blank"> 
 Employer Accommodation Request Form
 </a>
 </li>
@@ -182,7 +180,7 @@ Sovereign Academy and Ask Sage provide educational resources only.<br />
 We are not attorneys and this is not legal advice.<br />
 Always consult a licensed attorney for legal matters.
   </div>
-  © 2025 Sovereign Academy — Built by the people, powered by Sage AI. You are not alone.
+  © 2025 Sovereign Academy — Built by the people for the people, powered by Sage AI. You are not alone.
 </footer>
 
 </body>
